Fixati paragrafi Home, overflow e footer

--- a/Stili-predefiniti/general-style.css
+++ b/Stili-predefiniti/general-style.css
@@ -73,7 +73,15 @@ body::before {
     transform: rotate(-17deg) scale(0.8); /* Ruota l'immagine di 20 gradi e rendila del 80% delle dimensioni originali */
 }
 
+header, nav, main, footer {
+    width: 100%;
+}
 
+
+body {
+  overflow-x: hidden;
+  overflow-x: clip !important;
+}
 
 
 
@@ -103,8 +111,11 @@ nav ul li a {
 
 
 nav ul li a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
+  color: #FFFFFF;
+  text-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Aumenta il blur dell'ombra */
 }
+
 
 
 
@@ -118,6 +129,7 @@ nav ul li a:hover {
     background-color: #E8DFCA; /* Colore di sfondo */
     border-radius: 25px; /* Arrotonda i bordi */
     display: inline-block; /* Cambia il display da block a inline-block */
+    box-shadow: 10px 10px 15px -10px rgba(0, 0, 0, 0.85);
 }
 
 #breadcrumbs a {
@@ -143,6 +155,7 @@ nav ul li a:hover {
     align-items: center;
     float: right;
     margin-top: -15px;
+    padding-right: 30px;
   }
   
   .language-option {
@@ -171,8 +184,8 @@ nav ul li a:hover {
     right: 0;
     bottom: 0;
     background-color: #E8DFCA;
-    -webkit-transition: .4s;
-    transition: .4s;
+    -webkit-transition: .1s;
+    transition: .1s;
     border-radius: 34px;
     border: 2px solid #000000; /* Aggiungi un bordo nero */
 
@@ -186,8 +199,8 @@ nav ul li a:hover {
     left: 1px;
     bottom: 1px;
     background-color: rgb(175, 148, 107);
-    -webkit-transition: .4s;
-    transition: .4s;
+    -webkit-transition: .1s;
+    transition: .1s;
     border-radius: 50%;
     border: 1px solid #000000; /* Aggiungi un bordo nero */
   }
@@ -207,31 +220,85 @@ main {
     background-color: #4F6F52;
     padding: 20px;
     color: #F5EFE6;
+    box-shadow: 10px 10px 15px -10px rgba(0, 0, 0, 0.85);
+}
+
+h1 {
+    font-size: 30px;
 }
 
 
 
 
 /* Paragraphs */
-  .paragrafo {
-    margin: 10px;
-  }
-  
-  .contenuto {
-    background-color: #4F6F52;
-    border-radius: 10px;
-    padding: 20px;
-  }
-  
-  .paragrafo1, .paragrafo3 {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-  
-  .paragrafo2, .paragrafo4 {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+.paragraph-section {
+  display: flex;
+  flex-direction: column;
+  color: #E8DFCA;
 }
+
+.left-align {
+  justify-content: flex-start; /* Allinea i paragrafi a sinistra */
+  padding-right: 20px; /* Aggiungi spazio a destra per allineare con il padding */
+  margin-left: 1%;
+}
+
+.right-align {
+  justify-content: flex-end; /* Allinea i paragrafi a destra */
+  padding-left: 20px; /* Aggiungi spazio a sinistra per allineare con il padding */
+  margin-left: 14.7%;
+}
+
+.paragraph {
+  display: flex;
+  align-items: center;
+  background-color: #1a4d2e;
+  border-radius: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 20px 20px;
+  width: 80%;
+  overflow: hidden;
+  border-color: #000000;
+  border: 3px solid black;
+  box-shadow: 10px 10px 15px -10px rgba(0, 0, 0, 0.85);
+}
+
+.paragraph img {
+  max-width: 200px;
+  margin-right: 20px;
+  border: #000000 3px solid;
+  box-shadow: 10px 10px 15px -10px rgba(0, 0, 0, 0.85);
+}
+
+.left-image {
+  order: -1;
+}
+
+.right-image {
+  order: 1;
+}
+
+.left-title {
+  order: -1;
+  padding-right: 10px;
+  padding-bottom: 104px;
+  font-size: 25px;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.left-title-material {
+  padding-top: 25px;
+}
+
+.right-title {
+  order: 2;
+  padding-bottom: 104px;
+  font-size: 25px;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+
 
 
 
@@ -255,38 +322,41 @@ footer {
 }
 
 #contatti {
-    flex: 1; /* Il contenuto del footer a sinistra */}
+    flex: 1; /* Il contenuto del footer a sinistra */
+    border-right: #E8DFCA 1px solid;
+  }
 
 #termini-servizi {
     flex: 1; /* Il contenuto del footer a destra */
     text-align: left;
-    padding-right: 20px;
+    padding-left: 90px;
+    padding-right: 30px;
 }
 
 /* Link email, telefono e ringraziamenti */
 #emailLink,
 #phoneLink,
-#Ringraziamenti {
+#githubLink,
+#Ringraziamenti,
+#link-termini-servizi {
     color: #E8DFCA; /* Colore testo */
     text-decoration: none; /* Rimuovi sottolineatura predefinita */
     margin-top: 10px; /* Aggiungi spazio sopra */
-
 }
 
+/* Aggiungi effetto hover */
 #emailLink:hover,
 #phoneLink:hover,
+#githubLink:hover,
 #Ringraziamenti:hover,
 #link-termini-servizi:hover {
+    color: #FFFFFF; /* Cambia il colore del testo al passaggio del mouse */
     text-decoration: underline; /* Aggiungi sottolineatura al passaggio del mouse */
-}
-
-#Ringraziamenti,
-#link-termini-servizi {
     cursor: pointer; /* Cambia il cursore in una mano quando si passa sopra il testo */
+    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
-
-
-
-
-
+#Ringraziamenti {
+    text-align: left;
+    padding-top: 4px;
+}
